xee-xpath/tests/snapshots/xpath__absent_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\".\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: ".",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                1,
            ),
        },
    },
)
