xee-xpath/tests/snapshots/xpath__absent_context_with_operation.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\". + 1\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: ". + 1",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: 5,
        },
    },
)
