xee-xpath/tests/snapshots/xpath__arith_empty_sequence_left.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() + 1\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
