xee-xpath/tests/snapshots/xpath__atomize.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1) eq (1)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
