xee-xpath/tests/snapshots/xpath__atomize_xml_attribute_eq_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a f=\"FOO\"/><b f=\"FOO\"/></doc>\"#, \"doc/a/@f eq doc/b/@f\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
