xee-xpath/tests/snapshots/xpath__atomize_xml_attribute_missing.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/></doc>\"#, \"doc/a/@f eq 'FOO'\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
