xee-xpath/tests/snapshots/xpath__case_as_any_uri.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'http://example.com' cast as xs:anyURI\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                AnyURI(
                    "http://example.com",
                ),
            ),
        ),
    },
)
