xee-xpath/tests/snapshots/xpath__case_as_hex_binary_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'f' cast as xs:hexBinary\")"
---
Err(
    FORG0001,
)
