xee-xpath/tests/snapshots/xpath__cast_as_base64_binary.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'aGVsbG8=' cast as xs:base64Binary\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Binary(
                    Base64,
                    [
                        104,
                        101,
                        108,
                        108,
                        111,
                    ],
                ),
            ),
        ),
    },
)
