xee-xpath/tests/snapshots/xpath__cast_as_day_time_duration_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('P1DT2H3M4S' cast as xs:dayTimeDuration) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "P1DT2H3M4S",
                ),
            ),
        ),
    },
)
